--- a/Pages/Tasks.razor
+++ b/Pages/Tasks.razor
@@ -78,16 +78,20 @@ else
                                 <input class="form-control" type="date"
                                        placeholder="Task Deadline"
                                        @bind="deadline" />
-
-                                <select>
+                           
+                                <select @bind="studentID">
+                                    <option disabled hidden>Select Student</option>
                                     @foreach (var student in studentList)
                                     {
-                                        
-                                        <option value=@student.UserName>@student.ToString()</option>
-                                        
+                                        if (student.UserName.Contains("ctbav.ro"))
+                                        {
+                                            <option value=@student.Id>@student.ToString()</option>
+                                        }
                                     }
+                                
                                 </select>
                                 <select @bind="priorityState">
+
                                     @foreach (Priority pS in Enum.GetValues(typeof(Priority)))
                                     {
                                         <option value=@pS>@pS.ToString()</option>
@@ -110,55 +114,57 @@ else
 
 @code {
 
-    private string taskName;
-    private string taskDescriptionPreview;
-    private DateTime deadline=DateTime.Now;
-    private StateOfTask status;
-    List<Siemens.MP.Entities.Task> tasks;
-    private Priority priorityState;
-    private string taskDescription;
-    private IList<UserInfo> studentList;
-    bool ShowPopup = false;
-    public RoleType role;
-    
+        private string taskName;
+        private string taskDescriptionPreview;
+        private DateTime deadline=DateTime.Now;
+        private StateOfTask status;
+        List<Siemens.MP.Entities.Task> tasks;
+        private Priority priorityState;
+        private string taskDescription;
+        private IList<UserInfo> studentList;
+        bool ShowPopup = false;
+        public RoleType role;
+        private string studentID;
 
-    Entities.Task task = new Entities.Task();
+        Entities.Task task = new Entities.Task();
 
-    void AddNewTask()
-    {
-        // Make new forecast
-        task = new Entities.Task();
-        // Set Id to 0 so we know it is a new record
-        task.Id = 0;
-        // Open the Popup
-        ShowPopup = true;
-    }
-
-    void ClosePopup()
-    {
-        // Close the Popup
-        ShowPopup = false;
-    }
-
-    protected override async System.Threading.Tasks.Task OnInitializedAsync()
-    {
-        studentList = userManager.Users.ToList();
-        List<Siemens.MP.Entities.Task> taskList = await TaskRepository.GetAll();
-        tasks = taskList;
-    }
-
-    private void AddTask()
-    {
-        if (!string.IsNullOrEmpty(taskName) && !string.IsNullOrEmpty(taskDescriptionPreview) && deadline >= DateTime.Now && !string.IsNullOrEmpty(taskDescription) && priorityState != Priority.DEFAULT)
+        void AddNewTask()
         {
-            Siemens.MP.Entities.Task newTask = new Siemens.MP.Entities.Task
+            // Make new forecast
+            task = new Entities.Task();
+            // Set Id to 0 so we know it is a new record
+            task.Id = 0;
+            // Open the Popup
+            ShowPopup = true;
+        }
+
+        void ClosePopup()
+        {
+            // Close the Popup
+            ShowPopup = false;
+        }
+
+        protected override async System.Threading.Tasks.Task OnInitializedAsync()
+        {
+            studentList = userManager.Users.ToList();
+            List<Siemens.MP.Entities.Task> taskList = await TaskRepository.GetAll();
+            tasks = taskList;
+        }
+
+        private void AddTask()
+        {
+            if (!string.IsNullOrEmpty(taskName) && !string.IsNullOrEmpty(taskDescriptionPreview) && deadline >= DateTime.Now &&
+            !string.IsNullOrEmpty(taskDescription) && priorityState != Priority.DEFAULT && !string.IsNullOrEmpty(studentID))
             {
-                Name = taskName,
-                DescriptionPreview = taskDescriptionPreview,
-                Deadline = deadline,
-                Description = taskDescription,
-                PriorityState = priorityState,
-               
+                Siemens.MP.Entities.Task newTask = new Siemens.MP.Entities.Task
+                {
+                    Name = taskName,
+                    DescriptionPreview = taskDescriptionPreview,
+                    Deadline = deadline,
+                    Description = taskDescription,
+                    PriorityState = priorityState,
+                    UserInfoId = studentID
+
             };
             TaskRepository.Insert(newTask);
             OnInitializedAsync();
