--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,7 +2,8 @@
 
 @using Siemens.MP.Entities
 @using Siemens.MP.Enums
-@inject Siemens.MP.Data.Repositories.GenericRepository<Note> NoteRepository
+@using Siemens.MP.Pages.Components
+
 @inject Siemens.MP.Data.Repositories.GenericRepository<Siemens.MP.Entities.Task> TaskRepository
 @inject NavigationManager navigationManager
 
@@ -90,56 +91,8 @@
         </div>
     </div>
 
-    <div class="card">
-        <div class="card-header" style="background-color:#ba55d3">
-            <p class="h5">
-                <button id="0HLPTKM2659LL" type="button" class="btn" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    <b>Note</b>
-                    <img src="/css/writing.png" height="20" width="20">
-                </button>
-            </p>
-        </div>
-        <div class="collapse" id="collapseTwo">
-            <div class="card-body" style="background-color:whitesmoke">
-                <ul>
-                    @foreach (var note in notes)
-                    {
-                        <li class="list-group-item d-flex justify-content-between align-items-center" style="background-color:#fcf5ec">
-                            <details>
-                                <summary class="buttonList" style="width:1200px">@note.Title <i style="float:right">@note.CreatedAt.ToShortDateString()</i></summary>
-                                <p class="mb-auto">@note.Content</p>
-                            </details>
-                        </li>
-                    }
-                </ul>
-                <button id="0HLPTP1OMP5O1" type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#exampleModal" @onclick="OpenModal">
-                    Add
-                </button>
-                @if (ShowModal == true)
-                {
-                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header" style="background-color:#ffeaff">
-                                    <input placeholder="Note Title" style="width:400px; background-color:#fff7ff" @bind="title" />
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body" style="background-color:#ffeaff">
-                                    <textarea style="width:460px; height:400px; background-color:#ffffea" @bind="content"></textarea>
-                                </div>
-                                <div class="modal-footer" style="background-color:#ffeaff">
-                                    <button type="button" class="btn btn btn-success" @onclick="AddNote">Save</button>
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                }
-
-            </div>
-        </div>
+    <div>
+        <NoteComponent></NoteComponent>
     </div>
 
 </body>
@@ -150,12 +103,10 @@
 @code
 {
 
-    private float firstWidth = 50;
-    private float secondWidth = 50;
-    private float thirdWidth =  50;
-    private float fourthWidth =  50;
-
-    private int numberOfUrgentTasks = 7;
+    private float firstWidth = 0;
+    private float secondWidth = 0;
+    private float thirdWidth = 0;
+    private float fourthWidth = 0;
 
     private int nrToDo = 0;
     private int nrOngoing = 0;
@@ -165,50 +116,12 @@
 
     private DateTime now = DateTime.Now;
 
-    private string title;
-    private string content;
-    private IList<Note> notes;
-    bool ShowModal = false;
-
     List<Siemens.MP.Entities.Task> tasks;
-
-    private void OpenModal()
-    {
-        ShowModal = true;
-    }
-
-    private void CloseModal()
-    {
-        ShowModal = false;
-    }
-
-    private void AddNote()
-    {
-        if (!string.IsNullOrWhiteSpace(title) && !string.IsNullOrWhiteSpace(content))
-        {
-            Note newNote = new Note
-            {
-                Title = title,
-                Content = content
-            };
-
-            NoteRepository.Insert(newNote);
-            OnInitializedAsync();
-            ResetFieldToDefault();
-            CloseModal();
-        }
-    }
-
-    private void ResetFieldToDefault()
-    {
-        title = string.Empty;
-        content = string.Empty;
-    }
 
 
     protected override async System.Threading.Tasks.Task OnInitializedAsync()
     {
-        notes = await NoteRepository.GetAll();
+
         tasks = await TaskRepository.GetAll();
 
         foreach (var task in tasks)
@@ -235,7 +148,8 @@
             }
         }
         Percentage();
-        foreach(var task in tasks)
+
+        foreach (var task in tasks)
         {
             if (task.PriorityState == Priority.HIGH)
             {
@@ -248,10 +162,10 @@
 
     private void Percentage()
     {
-        firstWidth = ((float) nrToDo / tasks.Count) * 100;
-        secondWidth = ((float) nrOngoing / tasks.Count) * 100;
-        thirdWidth = ((float) nrCodeReview / tasks.Count) * 100;
-        fourthWidth = ((float) nrDone / tasks.Count) * 100;
+        firstWidth = ((float)nrToDo / tasks.Count) * 100;
+        secondWidth = ((float)nrOngoing / tasks.Count) * 100;
+        thirdWidth = ((float)nrCodeReview / tasks.Count) * 100;
+        fourthWidth = ((float)nrDone / tasks.Count) * 100;
     }
 
 
