--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -34,6 +34,7 @@
                 <select asp-for="Input.roleType" asp-items="Html.GetEnumSelectList<RoleType>()">
                     <option value="">Choose Role</option>
                 </select>
+                <p><b><i>Students accounts must end with "ctbav.ro"</i></b></p>
                 <span asp-validation-for="Input.roleType" class="text-danger"></span>
             </div>
             <button type="submit" class="btn btn-primary">Register</button>
